--- a/posts/templates/post/postDetails.html
+++ b/posts/templates/post/postDetails.html
@@ -1,4 +1,7 @@
 <h1>{{ post.title }}</h1>
+{% if post.image %}
+  <img src="{{ post.image.url }}" alt="{{ post.title }}">
+{% endif %}
 <p>{{ post.content }}</p>
 <p>{{ post.created_at|date:"d/m/Y" }}</p>
 <p>{{ post.author }}</p>
